--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.15.0",
+    "@ionic-native/core": "^4.17.0",
     "@ionic-native/diagnostic": "^4.17.0",
+    "@ionic-native/geolocation": "^4.17.0",
+    "@ionic-native/google-maps": "^4.15.1",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.0",
-    "cordova-android": "~7.1.1",
+    "cordova-android": "7.1.2",
+    "cordova-browser": "^5.0.4",
     "cordova-ios": "~4.5.5",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-googlemaps": "2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -58,11 +62,20 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCO8ryKRAkT2zPwSJLWJQKsQVr-JHSqAYY",
+        "API_KEY_FOR_IOS": "AIzaSyCO8ryKRAkT2zPwSJLWJQKsQVr-JHSqAYY",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
+      }
     },
     "platforms": [
       "android",
-      "ios"
+      "ios",
+      "browser"
     ]
   }
 }
